# ouroboros

./: .gitignore  README.md  analyze_model.py  assess_consistency.py  clean_data.py  constrained_model.py  convert_mus_data.py  data.py  eval_trained_model.py  hyperparameter_cv.py  kernel_comparison.py  kernels.py  model.py  model_utils.py  ouroboros.ipynb  pyproject.toml  run_adult_experiments.py  run_all_juves.sh  run_all_musci.sh  run_budgie_experiments.py  run_budgie_marmo_experiments.py  run_juvenile_experiments.py  run_marmo_experiments.py  run_multi_marmos.py  run_muscimol_experiments.py  run_pupil_tutor_experiments.py  run_single_model.py  run_synthetic_experiments.py  test_eval_error.py  test_preprocess_script.py  toy_data_train.py  train_full.py  train_ksteps.py  utils.py
analysis/: analysis.py  budgie_analysis.py
data/: data_utils.py  generate_data.py  generate_data_gabo.py  load_data.py  load_data_simple.py  preprocess.py  real_data.py  toy_data.py
examples/: clean_data.py  full_pipeline.py  segment_data.py  train_model.py
model/: constrained_model.py  filters.py  kernels.py  model.py  model_clean.py  model_utils.py
train/: eval.py  model_cv.py  train.py  train_model.py  train_model_given_audio.py
visualization/: model_vis.py  recon_vis.py
